# Switch_Charging_V2

./: .gitignore  CLAUDE.md  switching_circuit_v2.py  test_detector.py  test_switching_circuit_v2.py
docs/: c_acquisition_plan.md  rp2040_adc_upgrade.md  wiring_diagram.txt
firmware/: main.py  test_ina226.py  test_switching.py  upload.py
firmware-c/: CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware-c/src/: cmd_parser.c  cmd_parser.h  config.h  ina226.c  ina226.h  main.c  neopixel.c  neopixel.h  streaming.c  streaming.h  switching.c  switching.h  usb_cdc.c  usb_cdc.h  ws2812.pio
pcb/: SCHEMATIC_SPEC.md  gen_schematic.py
pcb/fab/: bom_jlc.csv  positions_jlc.csv
pcb/lib/: switching_circuit_v2.bak  switching_circuit_v2.kicad_sym
pcb/switching_circuit_v2/: Switching_Circuit_BOM.csv  fp-lib-table  switching_circuit_v2-all-pos.csv  switching_circuit_v2.kicad_pcb  switching_circuit_v2.kicad_pro  switching_circuit_v2.kicad_sch  sym-lib-table
schedules/: example_cccv.json  example_multistage.json  example_short_test.json
server/: __init__.py  __main__.py  ap-fallback.service  ap_fallback.py  auto_engine.py  auto_follow.py  auto_logger.py  command_server.py  config.py  cycler_detector.py  fleet.py  gpio_driver.py  mode_controller.py  network_mode.py  power-button.service  power_button.py  recorder.py  schedule.py  schedule_monitor.py  sequence_engine.py  switching-circuit.service
tests/: test_auto_engine.py  test_auto_follow.py  test_cycler_detector.py  test_mock_server_tui.py  test_neware_to_json.py  test_schedule.py  test_schedule_monitor.py
tools/: cnvr_ab_sweep.py  neware_to_json.py  plot_cmd_vs_sense.py  plot_cnvr_ab.py  plot_doe_grid.py  plot_recording.py  rate_sweep.py  recording_doe.py
tui/: __init__.py  __main__.py  app.py  client.py  data_logger.py  discovery.py  latency_probe.py  wifi_scan.py
tui/widgets/: __init__.py  auto_follow_panel.py  auto_panel.py  circuit_diagram.py  compact_right_panel.py  connection_bar.py  fleet_list.py  (+12 more)
(+21 files in other folders)
